// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<tabs> demo: render [basic] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"arco-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [editable] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-card-gutter arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-card-gutter\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <!---->
      </div>
      <div class=\\"arco-tabs-nav-add-btn\\"><span class=\\"arco-icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-plus\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M5 24h38M24 5v38\\"></path></svg></span></div>
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\">Content of Tab Panel 1</div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\">Content of Tab Panel 2</div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\">Content of Tab Panel 3</div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\">Content of Tab Panel 4</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [extra] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"arco-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!----><button class=\\"arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-medium arco-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Action
      </button>
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [icon] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"arco-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [lazy] correctly 1`] = `
"<div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
  <!---->
  <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
    <!---->
    <div class=\\"arco-tabs-nav-tab\\">
      <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"arco-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"arco-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"arco-tabs-content\\">
    <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"arco-tabs-content-item\\">
        <!--v-if-->
      </div>
      <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
        <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"arco-tabs-content-item\\">
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [position] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-radio-group-button arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio-button arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"top\\"><span class=\\"arco-radio-button-content\\">Top</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"right\\"><span class=\\"arco-radio-button-content\\">Right</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"bottom\\"><span class=\\"arco-radio-button-content\\">Bottom</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"left\\"><span class=\\"arco-radio-button-content\\">Left</span></label></span></div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
      <!---->
      <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
        <!---->
        <div class=\\"arco-tabs-nav-tab\\">
          <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
            <div class=\\"arco-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
          </div>
          <!---->
        </div>
        <!---->
        <div class=\\"arco-tabs-nav-extra\\">
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"arco-tabs-content\\">
        <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
          <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
          </div>
          <div class=\\"arco-tabs-content-item\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
          </div>
          <div class=\\"arco-tabs-content-item\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [type] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-radio-group-button arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio-button arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"line\\"><span class=\\"arco-radio-button-content\\">Line</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"card\\"><span class=\\"arco-radio-button-content\\">Card</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"card-gutter\\"><span class=\\"arco-radio-button-content\\">Card Gutter</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"text\\"><span class=\\"arco-radio-button-content\\">Text</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"rounded\\"><span class=\\"arco-radio-button-content\\">Rounded</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"capsule\\"><span class=\\"arco-radio-button-content\\">Capsule</span></label></span></div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-tabs arco-tabs-horizontal arco-tabs-top arco-tabs-type-line arco-tabs-size-medium\\">
      <!---->
      <div class=\\"arco-tabs-nav arco-tabs-nav-horizontal arco-tabs-nav-top arco-tabs-nav-size-medium arco-tabs-nav-type-line\\">
        <!---->
        <div class=\\"arco-tabs-nav-tab\\">
          <div class=\\"arco-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
            <div class=\\"arco-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
          </div>
          <!---->
        </div>
        <!---->
        <div class=\\"arco-tabs-nav-extra\\">
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"arco-tabs-content\\">
        <div class=\\"arco-tabs-content-list\\" style=\\"margin-left: -0%;\\">
          <div class=\\"arco-tabs-content-item arco-tabs-content-item-active\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 1 </div>
          </div>
          <div class=\\"arco-tabs-content-item\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 2 </div>
          </div>
          <div class=\\"arco-tabs-content-item\\">
            <div class=\\"arco-tabs-pane\\"> Content of Tab Panel 3 </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
